# artificial-agency

./: .gitignore  APPROACH.md  LICENSE  NOTICE  README.md  framework.md  plan.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pr-regression.yml
debug/: __init__.py
debug/dashboard/: __init__.py  agent_creator_reader.py  app.py  config_manager.py  memory_reader.py  modal_snapshot.py  model_inputs.py  runner.py  test_model_inputs.py  test_workshop.py  workshop.py
debug/playback/: __init__.py  runtime.py
debug/scoring/: build_human_baseline.py  build_human_baseline_stats.py  human_baseline.json  human_baseline_stats.json
doc/: run_runtime.md
doc/architecture/: highlevel_vision.md  io_reference.md  system_architecture.md  techstack.md
experiments/single_vlm_lora/: latent_sensitivity.py  modal_a100_runner.py  pyproject.toml  run_single_vlm_lora.py
experiments/single_vlm_lora/configs/: gemma4_26b_a10080_lp_rate_temp12_weight30_beta03.yaml  gemma4_26b_a100_40gb.yaml  gemma4_e2b_a10040_best_accum4_residual_ce.yaml  gemma4_e2b_a10040_best_lp_signal_boost.yaml  gemma4_e2b_a10040_lp_rate_default.yaml  gemma4_e2b_a10040_lp_rate_temp14_weight30_beta03.yaml  gemma4_e2b_a10040_lp_rate_update2.yaml  gemma4_e2b_a10040_lp_rate_update2_temp14_weight30_beta03.yaml  gemma4_e2b_a10040_lpboost_resbias1.yaml  gemma4_e2b_a10040_lpboost_resbias2.yaml  gemma4_e2b_a10040_lpboost_resbias2_horizon8.yaml  gemma4_e2b_a10040_lpboost_resbias2_temp12_policy075.yaml  gemma4_e2b_a10040_lpreturn20.yaml  gemma4_e2b_a10040_lpreturn32.yaml  gemma4_e2b_a10040_lpweight20.yaml  gemma4_e2b_a10040_r32_action_lp_baseline.yaml  gemma4_e2b_a10040_r32_hidden_pool_attention.yaml  gemma4_e2b_a10040_r32_policy_accum4.yaml  gemma4_e2b_a10040_r32_residual_ce.yaml  gemma4_e2b_a10040_temp10_lpreturn.yaml  gemma4_e2b_a10040_temp12_lpreturn.yaml  gemma4_e2b_a10040_update1_lpreturn20.yaml  gemma4_e2b_a10040_update2_history1.yaml  gemma4_e2b_a10040_update2_history2.yaml  gemma4_e2b_a10040_update2_history8.yaml  gemma4_e2b_a10040_update2_image128.yaml  gemma4_e2b_a10040_update2_image384.yaml  gemma4_e2b_a10040_update2_lora_dropout0.yaml  gemma4_e2b_a10040_update2_lora_r32.yaml  gemma4_e2b_a10040_update2_lora_r64.yaml  gemma4_e2b_a10040_update2_lora_r8.yaml  gemma4_e2b_a10040_update2_policy001.yaml  gemma4_e2b_a10040_update2_temp10.yaml  gemma4_e2b_a10040_update2_temp12.yaml  gemma4_e2b_a10040_update2_temp14.yaml  gemma4_e2b_a10040_update2_uniform_policy.yaml  gemma4_e2b_a10080_update2_lora_r128.yaml  gemma4_e2b_h100.yaml  mac_gemma4_e2b_best.yaml  mac_smolvlm2_256m.yaml  (+2 more)
experiments/single_vlm_lora/configs/adapter_comparison_100turn_20260524/: separate_adapters.yaml  shared_adapter_baseline.yaml
experiments/single_vlm_lora/configs/separate_adapter_sweep_20260524/: action_lp_baseline.yaml  combo_temp12_actionlp_return20_headonly.yaml  return20.yaml  temp10.yaml  temp12.yaml
experiments/single_vlm_lora/configs/shared_adapter_sweep_20260524/: attention_return20.yaml  baseline_shared.yaml  return20.yaml  temp10.yaml  temp10_return20.yaml  update1_return20.yaml
experiments/single_vlm_lora/single_vlm_arc/: __init__.py  actions.py  config.py  env.py  history.py  logging.py  model.py  online_update.py  rewards.py
kaggle/: .env.example  Makefile  README.md  requirements-kaggle.txt
notion/: ideas.md
scripts/: README.md  assemble_run_video.py  download_hf_model_to_modal_volume.py  download_modal_hf_model.py  ollama_orchestrator_agent_e2e.py  openai_full_game_loop_e2e.py  openai_goal_model_e2e.py  openai_orchestrator_agent_e2e.py  openai_world_model_e2e.py  world_model_e2e.py
tests/: README.md  conftest.py  test_contracts.py  test_goal_tool_adapter.py  test_model_layout.py  test_openai_full_game_loop_e2e.py  test_openai_provider.py  test_openai_tool_adapters.py  test_openai_world_model_e2e.py  test_orchestrator_agent_adapters.py  test_runtime_smoke.py  test_sqlite_memory.py  test_updater_adapter.py  test_world_tool_adapter.py
(+448 files in other folders)
