[project]
name = "face-of-agi"
version = "0.1.0"
description = "Minimal ARC-AGI-3 agent framework skeleton."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "arc-agi>=0.9.8",
    "matplotlib>=3.10.9",
    "openai>=2.34.0",
    "pyyaml>=6.0.3",
    "rich>=13.9.4",
]

[project.optional-dependencies]
ml = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/face_of_agi"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
debug = [
    "pandas>=2.3.3",
    "streamlit>=1.56.0",
]
test = [
    "pytest>=9.0.3",
]
dev = [
    "ipykernel>=6.29.5",
    "notebook>=7.4.2",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
