[project]
name = "single-vlm-lora-arc"
version = "0.1.0"
description = "Isolated single-VLM online LoRA ARC-AGI-3 experiment."
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.12.0",
    "face-of-agi",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "num2words>=0.5.14",
    "peft>=0.18.0",
    "pillow>=12.0.0",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=5.5.2,<6",
]

[tool.uv.sources]
face-of-agi = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["single_vlm_arc"]
